[metadata]
name = pythoncalculator
version = 0.0.1
author = Oliver Preston
author_email = ohlpreston1@sheffield.ac.uk
description = Perform basic calculations in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OliverPreston/Git-Group4
project_urls =
    Bug Tracker = https://github.com/OliverPreston/Git-Group4/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
